packages/isar/test/errors/class/mixin.dart
// only classes

import 'package:isar/isar.dart';

// Test case for mixin validation
// ignore_for_file: avoid_classes_with_only_static_members

// ignore: invalid_annotation_target - Test case for mixin validation
@collection
mixin Test {}
